--- a/Projetos/LoginPage/senha.html
+++ b/Projetos/LoginPage/senha.html
@@ -67,27 +67,27 @@
             <div id="inputs">
                 <div class="field">
                     <label for="usuario">Senha antiga</label>
-                    <div class="input">
+                    <div class="input one">
                         <i class="fa-solid fa-key"></i>
                         <input type="text" class="senha" autofocus placeholder="****************">
                     </div>
                 </div>
                 <div class="span">
-                    <span>Senha contém pelo menos 8 caracteres</span>
+                    <span>Senha contém pelo menos 8 caracteres, letras e numeros</span>
                 </div>
                 <div class="field">
                     <label for="senha">Nova senha</label>
-                    <div class="input">
+                    <div class="input two">
                         <i class="fa-solid fa-key"></i>
                         <input type="password" class="senha nova"  placeholder="****************">
                     </div>
                 </div>
                 <div class="span2">
-                    <span>Senha deve conter no minimo 8 caracteres</span>
+                    <span>Senha deve conter no minimo 8 caracteres com letras e numeros</span>
                 </div>
                 <div class="field">
                     <label for="senha">Confirme a nova senha</label>
-                    <div class="input">
+                    <div class="input three">
                         <i class="fa-solid fa-key"></i>
                         <input type="password" class="senha confirmacao" placeholder="****************">
                     </div>
