--- a/html/index.html
+++ b/html/index.html
@@ -70,7 +70,7 @@
                     <div class="item hardware">
                         <h2>Hardware</h2>
                         <p>Autodidata</p>
-                        <p>Experiencia com montagem, manutenção e formatação de computadores através de trabalhos freelancer</p>
+                        <p>Experiência com montagem, manutenção e formatação de computadores</p>
                     </div>
                     <div class="item desenvolvimento">
                         <h2>Desenvolvimento</h2>
@@ -80,7 +80,7 @@
                     <div class="item cloud">
                         <h2>Cloud</h2>
                         <p>Certificação Azure AZ-900</p>
-                        <p>Conhecimetos em AWS</p>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -108,18 +108,18 @@
                             <small>JavaScript</small>
                         </div>
                         <div class="logo">
-                            <img src="../img/html.png" title="HTML">
-                            <small>HTML</small>
-                        </div>
-                        <div class="logo">
+                            <div class="empty"></div>
+                            <small>Em breve</small>
+                        </div> 
+                        <!--<div class="logo">
                             <img src="../img/css.png" title="CSS">
                             <small>CSS</small>
-                        </div>
+                        </div>-->
                         <div class="logo rsp">
                             <div class="empty"></div>
                             <small>Em breve</small>
                         </div>
-                        <div class="logo rsp">
+                        <div class="logo">
                             <div class="empty"></div>
                             <small>Em breve</small>
                         </div>
@@ -147,12 +147,12 @@
                         <small>Git</small>
                     </div>
                     <div class="logo">
-                        <img src="../img/bootstrap.png" title="Bootstrap"  alt="Bootstrap" >
-                        <small>Bootstrap</small>
+                        <img src="../img/css.png" title="CSS" alt="CSS" >
+                        <small>CSS</small>
                     </div>
                     <div class="logo">
-                        <img src="../img/tensorflow.png" title="Tensorflow" alt="TensorFlow" >
-                        <small>Tensorflow</small>
+                        <img src="../img/bootstrap.png" title="Bootstrap"  alt="Bootstrap" >
+                        <small>Bootstrap</small>
                     </div>
                     <div class="logo">
                         <img src="../img/Azure0.png" alt="Azure" title="Azure">
@@ -185,7 +185,7 @@
                             <div class="slider on">
                                 <img src="../img/LoginPage.png" alt="Em Breve">
                                 <div class="describe">
-                                    <h3>LoginPage</h3>
+                                    <h3>Página de login</h3>
                                     <p>Página de login e de recuperação de senha com validações feito em CSS e JavaScript (Responsivo)</p>
                                     <div class="btns">
                                         <a href="https://github.com/MotaVinicius/LoginPage" target="_blank"><button class="link">Repositório</button></a>
@@ -194,13 +194,13 @@
                                 </div>
                             </div>
                             <div class="slider">
-                                <a href="FormValidator.html" target="_blank"><img src="../img/Captura4.png" alt="Form Validator"></a>
+                                <img src="../img/Blog.png" alt="Em Breve">
                                 <div class="describe">
-                                    <h3>Form Validator</h3>
-                                    <p>Formulario com validações utilizando js e jquery</p>
+                                    <h3>Blog de Idioma</h3>
+                                    <p>Feito utilizando Bootstrap, css, javascript e jquery (Responsivo)</p>
                                     <div class="btns">
-                                        <button class="link">Repositório</button>
-                                        <button class="link">Visualizar</button>
+                                        <a href="https://github.com/MotaVinicius/BlogIngles" target="_blank"><button class="link">Repositório</button></a>
+                                        <a href="../Projetos/Blog/HTML/index.html" target="_blank"><button class="link">Visualizar</button></a>
                                     </div>
                                 </div>
                             </div>
