--- a/Projetos/LoginPage/index.html
+++ b/Projetos/LoginPage/index.html
@@ -21,7 +21,7 @@
             <div id="inputs">
                 <div class="field">
                     <label for="usuario">Usuário</label>
-                    <div class="input">
+                    <div class="input one">
                         <i class="fa-solid fa-user"></i>
                         <input type="text" class="user" placeholder="Nome de usuário" autofocus>
                     </div>
@@ -31,13 +31,13 @@
                 </div>
                 <div class="field">
                     <label for="senha">Senha</label>
-                    <div class="input">
+                    <div class="input two">
                         <i class="fa-solid fa-key"></i>
                         <input type="password" class="senha" placeholder="****************">
                     </div>
                 </div>
                 <div class="span2">
-                    <span>Senha deve conter no minimo 8 caracteres</span>
+                    <span>Senha deve conter no minimo 8 caracteres, letras e numeros</span>
                 </div>
             </div>
             <div class="botao">
