--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../img/codigo-fonte.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../css/main.css
     ">
@@ -62,9 +63,9 @@
                     <div class="item soft-skills">
                         <h2>Soft Skills</h2>
                         <p>Disciplina</p>
-                        <p>Gerenciamento de Tempo</p>
-                        <p>Facilidade de aprendizagem</p>
+                        <p>Entusiasmo para aprender</p>
                         <p>Raciocinio lógico</p>
+                        <p>Facilidade de aprendizagem</p>
                         <p>Proatividade</p>
                     </div>
                     <div class="item hardware">
@@ -114,11 +115,11 @@
                         <!--<div class="logo">
                             <img src="../img/css.png" title="CSS">
                             <small>CSS</small>
-                        </div>-->
+                        </div>
                         <div class="logo rsp">
                             <div class="empty"></div>
                             <small>Em breve</small>
-                        </div>
+                        </div>-->
                         <div class="logo">
                             <div class="empty"></div>
                             <small>Em breve</small>
@@ -205,29 +206,7 @@
                                 </div>
                             </div>
                             <div class="slider">
-                                <a href="relogio.html" target="_blank"><img src="../img/Captura2.png" alt="Relógio Digital"></a>
-                                <div class="describe">
-                                    <h3>Relógio Digital</h3>
-                                    <p>Desenvolvido com html, css e js</p>
-                                    <div class="btns">
-                                        <button class="link">Repositório</button>
-                                        <button class="link">Visualizar</button>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="slider">
-                                <a href="calculadora.html" target="_blank"><img src="../img/Captura3.png" alt="Calculadora"></a>
-                                <div class="describe">
-                                    <h3>Calculadora</h3>
-                                    <p>Calculadora Simples com html, css e js</p>
-                                    <div class="btns">
-                                        <button class="link">Repositório</button>
-                                        <button class="link">Visualizar</button>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="slider">
-                                <a href="https://www.google.com.br/" target="_blank"><img src="../img/vazio.png" alt="Em Breve"></a>
+                                <a href="" target="_blank"><img src="../img/vazio.png" alt="Em Breve"></a>
                                 <div class="describe">
                                     <h3>Em breve</h3>
                                     <p>...</p>
@@ -238,7 +217,29 @@
                                 </div>
                             </div>
                             <div class="slider">
-                                <a href="https://www.google.com.br/" target="_blank"><img src="../img/vazio.png" alt="Em Breve"></a>
+                                <a href="" target="_blank"><img src="../img/vazio.png" alt="Em Breve"></a>
+                                <div class="describe">
+                                    <h3>Em breve</h3>
+                                    <p>...</p>
+                                    <div class="btns">
+                                        <button class="link">Repositório</button>
+                                        <button class="link">Visualizar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider">
+                                <a href="" target="_blank"><img src="../img/vazio.png" alt="Em Breve"></a>
+                                <div class="describe">
+                                    <h3>Em breve</h3>
+                                    <p>...</p>
+                                    <div class="btns">
+                                        <button class="link">Repositório</button>
+                                        <button class="link">Visualizar</button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="slider">
+                                <a href="" target="_blank"><img src="../img/vazio.png" alt="Em Breve"></a>
                                 <div class="describe">
                                     <h3>Em breve</h3>
                                     <p>...</p>
@@ -257,7 +258,8 @@
     <footer id="contato">
         <div id="creditos">
             <h4>Créditos e Atribuições</h4>
-            <a href="https://storyset.com/online">Online illustrations - Storyset</a>
+            <p><a href="https://storyset.com/online">Online illustrations - Storyset</a></p>
+            <p><a href="https://www.flaticon.com/br/icones-gratis/codigo-fonte" title="código fonte ícones">Código fonte ícones por Flaticon</a></p>
         </div>
         <div id="contato">
             <h4>Contato</h4>
